syntax = "proto3";

package safe_generate;

import "Molecule_Lib/etrans.proto";
import "Molecule_Tools/molecule_filter.proto";

// LillyMol:UserDocumentation
// Proto for safe_generate: safe_generate -C config.textproto ...

message Config {
  optional bool verbose = 1;

  optional element_transformation.ElementTransformations etrans = 2;

  repeated string library = 3;

  repeated string can_change = 4;
  repeated string cannot_change = 5;

  optional bool ignore_molecules_not_matching_queries = 6;

  optional uint32 min_atoms_in_fragment = 7;
  optional uint32 max_atoms_in_fragment = 8;

  // when a fragment changes size, how many extra atoms are allowed
  // and how many atoms can it lose.
  optional uint32 extra_atoms = 9;
  optional uint32 fewer_atoms = 10;

  optional uint32 extra_rings = 11;
  optional uint32 fewer_rings = 12;

  // If specified, a maximum value on the difference in the molecular
  // formulae for two fragments in order to be swapped. This uses
  // the Diff() method in the MFormula class. 
  // Note that this check is independent of the extra_atoms and
  // fewer_atoms checks.
  optional uint32 max_formula_difference = 13;

  // Fragments with two or more attachment points know the minimum
  // distance between attachment points. With this setting we can
  // impose a limit on how much the distance can change.

  optional uint32 max_distance_difference = 14;

  // If used, this must be the same as was given to the -P option
  // to mol2SAFE
  optional string atom_type = 15;

  // Substructure queries that will drop molecules.
  repeated string discard_if_match = 16;

  optional molecule_filter_data.Requirements molecule_filter = 17;

  // If a replacement involves swapping a ring/ring system,
  // we can impose constraints on differences in ring sizes
  // between the excised fragment and the ring sizes in the
  // replacement.
  optional uint32 max_increase_ring_size = 18;
  optional uint32 max_decrease_ring_size = 19;

  // Debugging breeding is hard. If set, safe_generate will write
  // the parents and the child to the output - even if the output
  // fails filters
  optional bool debug_breeding = 30;
}
